# film-app

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
film_app/: asgi.py  settings.py  urls.py  wsgi.py
